Actualitza menú principal amb Space Invaders

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
           <span>Joc clàssic amb controls tàctils</span>
         </a>
       </li>
-      <!-- Aquí pots afegir més projectes -->
+      <li>
+        <a href="space-invaders/index.html">
+          <strong>Space Invaders</strong><br>
+          <span>Defensa la Terra dels invasors espacials</span>
+        </a>
+      </li>
     </ul>
   </main>
 </body>
