--- a/arkanoid/index.html
+++ b/arkanoid/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+    <a href="/index.html">🏠 Inici</a>
+    <a href="/arkanoid/index.html">Arkanoid</a>
+    <a href="/space-invaders/index.html">Space Invaders</a>
+  </nav>
   <canvas id="gameCanvas"></canvas>
   <div id="touch-controls">
     <button id="left-btn">⟵</button>
