Cinc jocs clàssics minimalistes, menú i arrossegament touch. Index i README actualitzats.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,32 @@
     <ul class="project-list">
       <li>
         <a href="arkanoid/index.html">
-          <strong>Arkanoid per a mòbil</strong><br>
-          <span>Joc clàssic amb controls tàctils</span>
+          <strong>Arkanoid</strong><br>
+          <span>Arrossega la pala per trencar maons</span>
         </a>
       </li>
       <li>
         <a href="space-invaders/index.html">
           <strong>Space Invaders</strong><br>
-          <span>Defensa la Terra dels invasors espacials</span>
+          <span>Arrossega la nau per disparar als invasors</span>
+        </a>
+      </li>
+      <li>
+        <a href="pong/index.html">
+          <strong>Pong</strong><br>
+          <span>Arrossega la pala per retornar la pilota</span>
+        </a>
+      </li>
+      <li>
+        <a href="breakout/index.html">
+          <strong>Breakout</strong><br>
+          <span>Versió minimalista, trenca tots els maons</span>
+        </a>
+      </li>
+      <li>
+        <a href="tetris/index.html">
+          <strong>Tetris</strong><br>
+          <span>Arrossega per moure peces, encaixa-les!</span>
         </a>
       </li>
     </ul>
