--- a/space-invaders/index.html
+++ b/space-invaders/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <nav>
+            <a href="/index.html">Inici</a>
+            <a href="/arkanoid/index.html">Arkanoid</a>
+            <a href="/space-invaders/index.html">Space Invaders</a>
+            <a href="/pong/index.html">Pong</a>
+            <a href="/breakout/index.html">Breakout</a>
+            <a href="/tetris/index.html">Tetris</a>
+        </nav>
     <div id="game-container">
         <canvas id="gameCanvas" width="480" height="640"></canvas>
     </div>
