--- a/pong/index.html
+++ b/pong/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arkanoid Mòbil</title>
+  <title>Pong</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     <a href="/breakout/index.html">Breakout</a>
     <a href="/tetris/index.html">Tetris</a>
   </nav>
-  <canvas id="gameCanvas"></canvas>
+  <canvas id="gameCanvas" width="480" height="640"></canvas>
   <script src="game.js"></script>
 </body>
 </html>
