--- a/space-invaders/index.html
+++ b/space-invaders/index.html
@@ -7,14 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <nav>
-            <a href="/index.html">Inici</a>
-            <a href="/arkanoid/index.html">Arkanoid</a>
-            <a href="/space-invaders/index.html">Space Invaders</a>
-            <a href="/pong/index.html">Pong</a>
-            <a href="/breakout/index.html">Breakout</a>
-            <a href="/tetris/index.html">Tetris</a>
+        <nav class="navbar">
+            <button class="hamburger" aria-label="Obre el menú">☰</button>
+            <ul class="nav-links">
+                <li><a href="../index.html">Inici</a></li>
+                <li><a href="../arkanoid/index.html">Arkanoid</a></li>
+                <li><a href="../space-invaders/index.html">Space Invaders</a></li>
+                <li><a href="../pong/index.html">Pong</a></li>
+                <li><a href="../breakout/index.html">Breakout</a></li>
+                <li><a href="../tetris/index.html">Tetris</a></li>
+            </ul>
         </nav>
+        <script>
+            document.querySelector('.hamburger').onclick = function() {
+                document.querySelector('.nav-links').classList.toggle('open');
+            };
+        </script>
     <div id="game-container">
         <canvas id="gameCanvas" width="480" height="640"></canvas>
     </div>
