--- a/pong/index.html
+++ b/pong/index.html
@@ -7,21 +7,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="navbar">
-    <button class="hamburger" aria-label="Obre el menú">☰</button>
-    <ul class="nav-links">
-      <li><a href="../index.html">Inici</a></li>
-      <li><a href="../arkanoid/index.html">Arkanoid</a></li>
-      <li><a href="../space-invaders/index.html">Space Invaders</a></li>
-      <li><a href="../pong/index.html">Pong</a></li>
-      <li><a href="../breakout/index.html">Breakout</a></li>
-      <li><a href="../tetris/index.html">Tetris</a></li>
-    </ul>
-  </nav>
+  <link rel="stylesheet" href="../common/menu.css">
+  <div id="menu-container"></div>
   <script>
-    document.querySelector('.hamburger').onclick = function() {
-      document.querySelector('.nav-links').classList.toggle('open');
-    };
+    fetch('../common/menu.html').then(r=>r.text()).then(html=>{
+      document.getElementById('menu-container').innerHTML = html;
+    });
   </script>
   <canvas id="gameCanvas" width="480" height="640"></canvas>
   <script src="game.js"></script>
