Corregit: el CSS del menú comú ara es carrega des del <head> a totes les pàgines. Compatibilitat total GitHub Pages.

--- a/space-invaders/index.html
+++ b/space-invaders/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Invaders</title>
+</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../common/menu.css">
 </head>
 <body>
-        <link rel="stylesheet" href="../common/menu.css">
         <div id="menu-container"></div>
         <script>
             fetch('../common/menu.html').then(r=>r.text()).then(html=>{
