--- a/index.html
+++ b/index.html
@@ -19,35 +19,35 @@
     <p class="intro">Col·lecció de jocs clàssics minimalistes, creats per testejar les possibilitats de la IA i la web. Projecte de <a href="https://xarop.com" target="_blank">xarop.com</a>. Tots els jocs són 100% jugables des de mòbil i ordinador, amb controls suaus i sense complicacions.</p>
     <div class="games-grid">
       <a class="game-card" href="arkanoid/index.html">
-        <img src="arkanoid/capture.png" alt="Arkanoid" loading="lazy" />
+        <svg width="100" height="60" viewBox="0 0 100 60" xmlns="http://www.w3.org/2000/svg" style="display:block;margin:0 auto 10px auto;background:#222;border-radius:8px;"><rect x="10" y="10" width="80" height="10" fill="#fff"/><rect x="40" y="45" width="20" height="6" rx="2" fill="#0ff"/><circle cx="50" cy="40" r="5" fill="#f39c12"/></svg>
         <div>
           <strong>Arkanoid</strong>
           <span>Trenca maons arrossegant la pala</span>
         </div>
       </a>
       <a class="game-card" href="space-invaders/index.html">
-        <img src="space-invaders/capture.png" alt="Space Invaders" loading="lazy" />
+        <svg width="100" height="60" viewBox="0 0 100 60" xmlns="http://www.w3.org/2000/svg" style="display:block;margin:0 auto 10px auto;background:#222;border-radius:8px;"><rect x="45" y="45" width="10" height="8" rx="2" fill="#0ff"/><rect x="20" y="15" width="60" height="10" fill="#fff"/><circle cx="30" cy="30" r="3" fill="#f39c12"/><circle cx="70" cy="30" r="3" fill="#f39c12"/></svg>
         <div>
           <strong>Space Invaders</strong>
           <span>Destrueix invasors arrossegant la nau</span>
         </div>
       </a>
       <a class="game-card" href="pong/index.html">
-        <img src="pong/capture.png" alt="Pong" loading="lazy" />
+        <svg width="100" height="60" viewBox="0 0 100 60" xmlns="http://www.w3.org/2000/svg" style="display:block;margin:0 auto 10px auto;background:#222;border-radius:8px;"><rect x="10" y="10" width="80" height="6" rx="2" fill="#fff"/><rect x="45" y="45" width="10" height="6" rx="2" fill="#0ff"/><circle cx="50" cy="30" r="5" fill="#fff"/></svg>
         <div>
           <strong>Pong</strong>
           <span>Clàssic minimalista, juga amb la pala</span>
         </div>
       </a>
       <a class="game-card" href="breakout/index.html">
-        <img src="breakout/capture.png" alt="Breakout" loading="lazy" />
+        <svg width="100" height="60" viewBox="0 0 100 60" xmlns="http://www.w3.org/2000/svg" style="display:block;margin:0 auto 10px auto;background:#222;border-radius:8px;"><rect x="10" y="10" width="80" height="10" fill="#fff"/><rect x="40" y="45" width="20" height="6" rx="2" fill="#0ff"/><circle cx="50" cy="40" r="5" fill="#fff"/></svg>
         <div>
           <strong>Breakout</strong>
           <span>Trenca tots els maons!</span>
         </div>
       </a>
       <a class="game-card" href="tetris/index.html">
-        <img src="tetris/capture.png" alt="Tetris" loading="lazy" />
+        <svg width="100" height="60" viewBox="0 0 100 60" xmlns="http://www.w3.org/2000/svg" style="display:block;margin:0 auto 10px auto;background:#222;border-radius:8px;"><rect x="20" y="10" width="20" height="20" fill="#0ff"/><rect x="50" y="10" width="20" height="20" fill="#f39c12"/><rect x="35" y="35" width="30" height="10" fill="#fff"/></svg>
         <div>
           <strong>Tetris</strong>
           <span>Encaixa peces arrossegant</span>
